--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,54 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
+    <h2><strong>新規登録ページ</strong><i class="fas fa-user-plus" style="color: black; font-size: 27px;"></i></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_with model: @user, url: users_sign_up_confirm_path(@user), local: true do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>名前(フルネーム)</label><br />
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+      </div>
+
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>ユーザーネーム</label><br />
+        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class: "form-control" %>
+      </div>
+
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>性別(登録した性別は他ユーザーには表示されません)</label><br />
+        <label><%= f.radio_button :sex, :男性 %>男性</label>
+        <label><%= f.radio_button :sex, :女性 %>女性</label>
+      </div>
+
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>メールアドレス</label><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
+
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>パスワード</label>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> 文字以上)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      </div>
+
+      <div class="my-3 col-md-8 offset-md-2">
+        <label>パスワード(確認)</label><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
+      <br />
+      <p class="text-center mb-5" style="color: red;">※性別、メールアドレス、パスワードは登録後の変更はできません。ご注意ください。</p>
+      <div class="actions my-3">
+        <%= f.submit "確認画面へ✔︎", class: "btn btn-primary col-md-8 offset-md-2" %>
+      </div>
+    <% end %>
+
+    <p class="text-center">--既に登録済みのユーザーはこちら--</p>
+
+    <%= link_to new_user_session_path do %>
+      <button type="button" class="btn btn-success btn-sm my-3 col-md-8 offset-md-2">ログインへ<i class="fas fa-sign-in-alt btn" style="color: white; font-size: 27px;"></i></button>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
