--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,27 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <% if user_signed_in? %>
-          <a class="navbar-brand" href=""><strong>Dress<%= image_tag('icon2.png') %>fun</strong></a>
+          <a class="navbar-brand" href="/posts"><strong>Dress<%= image_tag('icon2.png') %>fun</strong></a>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-3">
+              <%= link_to new_post_path do %>
+                <i class="fas fa-plus-square btn" style="color: white; font-size: 27px;"></i>
+              <% end %>
+            </li>
+            <li class="nav-item mx-3">
+              <%= link_to user_path(current_user.id) do %>
+                <%= attachment_image_tag current_user,:user_image, :fill, 35, 35, format: 'jpeg', fallback: "user_icon.png", size: '35x35', class: "mt-1 rounded-circle" %>
+              <% end %>
+            </li>
+            <li>
+              <label class="text-white mt-2">Hi, <%= current_user.nickname %> !!</label>
+            </li>
+            <li class="nav-item mx-4 my-auto">
+              <%= link_to about_path do %>
+                <i class="fas fa-question-circle" style="color: white; font-size: 27px;"></i>
+              <% end %>
+            </li>
+          </ul>
         <% else %>
           <a class="navbar-brand" href="/"><strong>Dress<%= image_tag('icon2.png') %>fun</strong></a>
           <ul class="navbar-nav ml-auto">
@@ -25,6 +45,11 @@
             <li class="nav-item mx-3">
               <%= link_to new_user_session_path do %>
                 <i class="fas fa-sign-in-alt btn" style="color: white; font-size: 27px;"></i>
+              <% end %>
+            </li>
+            <li class="nav-item mx-4 my-auto">
+              <%= link_to about_path do %>
+                <i class="fas fa-question-circle" style="color: white; font-size: 27px;"></i>
               <% end %>
             </li>
           </ul>
