--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,12 +7,12 @@
 
       <div class="my-3 col-md-8 offset-md-2">
         <label>名前(フルネーム)</label><br />
-        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", placeholder: "例:田中太郎" %>
       </div>
 
       <div class="my-3 col-md-8 offset-md-2">
         <label>ユーザーネーム</label><br />
-        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class: "form-control" %>
+        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class: "form-control", placeholder: "TARO" %>
       </div>
 
       <div class="my-3 col-md-8 offset-md-2">
