--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
-    <h2 class="my-3"><strong>ユーザー情報編集<i class="fas fa-users-cog" style="color: black; font-size: 40px;"></i></strong></h2>
+    <h2 class="my-3 text-center"><strong>ユーザー情報編集<i class="fas fa-users-cog" style="color: black; font-size: 40px;"></i></strong></h2>
     <%= form_with model: @user, local: true do |f| %>
 
       <div class="my-5 col-md-5 offset-md-4">
