--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
-    <h2><strong>ユーザー詳細<i class="fas fa-portrait" style="color: black; font-size: 30px;"></i></strong></h2>
+    <h2 class="text-center"><strong>ユーザー詳細<i class="fas fa-portrait" style="color: black; font-size: 30px;"></i></strong></h2>
 
     <div class="offset-md-4">
       <%= attachment_image_tag @user,:user_image, :fill, 150, 150, format: 'jpeg', fallback: "user_icon2.png", size: '150x150', class: "mt-4 rounded-circle" %>
