--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-5">
   <div class="col-md-6 offset-md-3 text-center bg-white rounded shadow p-3 my-5 pb-5">
     <h1 class="my-3">-- Dress fun とは --</h1>
     <br />
