--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,13 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <% if user_signed_in? %>
           <a class="navbar-brand" href="/posts"><strong>Dress<%= image_tag('icon2.png') %>fun</strong></a>
@@ -56,7 +58,7 @@
         <% end %>
       </div>
     </header>
-    <div class="container mw-100" style="background-color: #eee; height: 100%;">
+    <div class="container mw-100" style="background-color: #eee; height: auto;">
       <%= yield %>
     </div>
   </body>
