--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-5">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
     <h2 class="text-center"><strong>新規投稿<i class="fas fa-pen-square" style="color: black;"></i></strong></h2>
     <br />
