--- a/app/views/devise/registrations/complete.html.erb
+++ b/app/views/devise/registrations/complete.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
-  <div class="mx-auto my-auto text-center">
-    <h1><strong>登録が完了しました！</strong></h1><br />
+<div class="row my-5" style="height: 500px;">
+  <div class="mx-auto text-center my-5">
+    <h1 class="my-auto"><strong>登録が完了しました！</strong></h1><br />
     <h4>引き続きDress funをお楽しみください。</h4>
   </div>
 </div>
