--- a/app/views/devise/registrations/confirm.html.erb
+++ b/app/views/devise/registrations/confirm.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row my-5">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
-    <h3 class="text-center text-decoration-underline">以下の情報で新規登録します。よろしいですか？</h3>
+    <h3 class="text-center border-bottom">以下の情報で新規登録します。よろしいですか？</h3>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <table class="table table-borderless my-5 offset-1">
