--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row my-5">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
-    <h2><strong>新規登録ページ</strong><i class="fas fa-user-plus" style="color: black; font-size: 27px;"></i></h2>
+    <h2 class="text-center my-5"><strong>新規登録ページ</strong><i class="fas fa-user-plus" style="color: black; font-size: 27px;"></i></h2>
 
     <%= form_with model: @user, url: users_sign_up_confirm_path(@user), local: true do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
