--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container my-5">
   <% @posts.each do |post| %><br />
-    <div class="col-md-7 mx-auto bg-white rounded shadow p-3 my-4 pb-5">
+    <div class="col-md-7 mx-auto bg-white rounded shadow p-3 my-5 pb-2">
       <div class="row offset-md-1">
         <%= link_to user_path(post.user) do %>
           <%= attachment_image_tag post.user, :user_image, :fill, 50, 50, format: 'jpeg', fallback: "user_icon_png", size: '50x50', class: "mt-1 rounded-circle" %>
@@ -17,16 +17,27 @@
           <% end %>
         <% end %>
       </div>
-      <div class="col-md-4 my-3 offset-md-2">
+
+      <div class="offset-md-9" id="like-<%= post.id %>">
+        <%= render partial: 'likes/like', locals: {post: post} %>
+      </div>
+
+      <div class="col-md-4 my-3 offset-md-1">
         <%= link_to post_path(post) do %>
           <strong style="color: black;"><%= post.title %></strong>
         <% end %>
       </div>
-      <div class="col-md-8 offset-md-2 my-3">
+      <div class="col-md-8 offset-md-1 my-3">
         <%= post.caption %>
       </div>
-      <div class="col-md-4 offset-md-2 my-3">
+      <div class="col-md-4 offset-md-1 my-3">
         <%= post.color %>
+      </div>
+
+      <div class="col offset-md-1 mt-5">
+        <%= link_to post_path(post.id) do %>
+          <p style="color: black;">コメント (<%= post.post_comments.count %>)</p>
+        <% end %>
       </div>
 
 
