--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -32,18 +34,29 @@
                 <i class="fas fa-plus-square btn" style="color: white; font-size: 35px;"></i>
               <% end %>
             </li>
-            <li class="nav-item mx-3">
-              <%= link_to user_path(current_user.id) do %>
-                <%= attachment_image_tag current_user,:user_image, :fill, 35, 35, format: 'jpeg', fallback: "user_icon.png", size: '35x35', class: "mt-1 rounded-circle" %>
-              <% end %>
-            </li>
-            <li>
-              <label class="text-white mt-2">Hi, <%= current_user.nickname %> !!</label>
-            </li>
             <li class="nav-item mx-4 my-auto">
               <%= link_to about_path do %>
                 <i class="fas fa-question-circle" style="color: white; font-size: 35px;"></i>
               <% end %>
+            </li>
+            <li class="nav-item mx-3 mt-1">
+              <%= link_to user_path(current_user.id) do %>
+                <%= attachment_image_tag current_user,:user_image, :fill, 35, 35, format: 'jpeg', fallback: "user_icon.png", size: '35x35', class: "mt-1 rounded-circle" %>
+              <% end %>
+            </li>
+            <li class="nav-item dropdown my-auto">
+              <button class="btn btn-outline-secondary dropdown-toggle text-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                Hi, <%= current_user.nickname %> !!
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li>
+                  <%= link_to user_path(current_user) do %>
+                    <span class="dropdown-item">マイページ</span>
+                  <% end %>
+                </li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </li>
           </ul>
         <% else %>
