--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -41,9 +41,8 @@
 
       <div class="col-md-10 offset-md-1 my-3">
         <%= link_to :back do %>
-          <button type="button" class="btn btn-outline-secondary col-md-12">戻る <i class="fas fa-undo-alt"></i></button>
+          <button type="button" class="btn btn-outline-secondary col-md-12"><i class="fas fa-undo-alt"></i></button>
         <% end %>
-
       </div>
   </div>
 </div>
