--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -40,5 +40,11 @@
       <%= f.submit "ユーザー内容を更新する", class: "btn btn-primary col-md-6 offset-md-3 my-3" %>
 
     <% end %>
+
+    <div class="col-md-6 offset-md-3 my-3">
+      <%= link_to :back do %>
+        <button type="button" class="btn btn-outline-secondary col-md-12"><i class="fas fa-undo-alt"></i></button>
+      <% end %>
+    </div>
   </div>
 </div>
