--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<div class="row my-5">
+<div class="row mt-5">
   <div class="col-md-5 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
     <h2 class="text-center"><strong>ユーザー詳細<i class="fas fa-portrait" style="color: black; font-size: 30px;"></i></strong></h2>
 
     <div class="offset-md-4">
-      <%= attachment_image_tag @user,:user_image, :fill, 150, 150, format: 'jpeg', fallback: "user_icon2.png", size: '150x150', class: "mt-4 rounded-circle mx-auto" %>
+      <%= attachment_image_tag @user,:user_image, :fill, 150, 150, format: 'jpeg', fallback: "user_icon2.png", size: '150x150', class: "mt-4 rounded-circle" %>
     </div>
 
     <table class="table table-borderless my-4 col-md-9 mx-auto">
@@ -26,3 +26,25 @@
     <% end %>
   </div>
 </div>
+
+<% if @user.posts.blank? %>
+  <div class="col bg-white rounded shadow p-3 my-3 pb-5 mx-auto">
+    <h3 class="text-center">このユーザーの投稿はまだありません</h3>
+  </div>
+<% else %>
+  <div class="row">
+    <% @user.posts.each do |post| %>
+      <div class="col-md-2 bg-white rounded shadow p-3 my-3 pb-5 mx-auto">
+        <% if post.post_images.present? %>
+          <% post.post_images.first(1).each do |post_image| %>
+            <div>
+              <%= link_to post_path(post) do %>
+                <%= attachment_image_tag post_image, :image, size: "200x150", class: "mx-auto border border-3 my-auto" %>
+              <% end %>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
