--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -55,7 +55,7 @@
         <table class="table">
           <tr>
             <td>
-              <%= f.text_area :comment, rows: '1', placeholder: "コメントを入力", class: "col-md-12 form-control rounded-pill offset-md-2" %>
+              <%= f.text_area :comment, rows: '1', placeholder: "コメントを入力(最大150字)", class: "col-md-12 form-control rounded-pill offset-md-2" %>
             </td>
             <td>
               <%= f.submit "送信する", class: "btn btn-primary rounded-pill offset-md-3" %>
