--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,5 +93,9 @@
       <% end %>
       <%= yield %>
     </div>
+
+    <footer class="bg-white pt-5 pb-4">
+      <p>©2021 KOHEI OZAWA ︎inc.</p>
+    </footer>
   </body>
 </html>
