--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,8 +94,8 @@
       <%= yield %>
     </div>
 
-    <footer class="bg-white pt-5 pb-4">
-      <p>©2021 KOHEI OZAWA ︎inc.</p>
+    <footer class="bg-white pt-3 pb-3">
+      <p class="text-center">©2021 KOHEI OZAWA ︎inc.</p>
     </footer>
   </body>
 </html>
