--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
     <div class="col-md-7 mx-auto bg-white rounded shadow p-3 my-5 pb-2">
       <div class="row offset-md-1">
         <%= link_to user_path(post.user) do %>
-          <%= attachment_image_tag post.user, :user_image, :fill, 50, 50, format: 'jpeg', fallback: "user_icon_png", size: '50x50', class: "mt-1 rounded-circle" %>
+          <%= attachment_image_tag post.user, :user_image, :fill, 50, 50, format: 'jpeg', fallback: "user_icon2.png", size: '50x50', class: "mt-1 rounded-circle" %>
           <strong class="my-auto mx-4" style="color: black;"><%= post.user.nickname %></strong>
         <% end %>
         <label class="my-auto mx-2"><%= post.created_at.strftime('%Y/%m/%d') %></label>
