--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -17,7 +18,7 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <% if user_signed_in? %>
-          <a class="navbar-brand" href="/posts" style="font-size: 30px;"><strong>Dress<%= image_tag 'icon2.png', :size =>'30x30' %>fun</strong></a>
+          <a class="navbar-brand" href="/posts" style="font-size: 35px;"><strong class="header-logo">Dress<%= image_tag 'icon2.png', :size =>'30x30' %>Fun</strong></a>
           <%= search_form_for @q, url: search_posts_path do |f| %>
             <div class="row offset-md-4">
               <div class="col-md-10">
@@ -63,7 +64,7 @@
             </li>
           </ul>
         <% else %>
-          <a class="navbar-brand" href="/" style="font-size: 30px;"><strong>Dress<%= image_tag 'icon2.png', :size =>'30x30' %>fun</strong></a>
+          <a class="navbar-brand" href="/" style="font-size: 35px;"><strong class="header-logo">Dress<%= image_tag 'icon2.png', :size =>'30x30' %>Fun</strong></a>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-3">
               <%= link_to new_user_registration_path do %>
@@ -72,7 +73,7 @@
             </li>
             <li class="nav-item mx-3">
               <%= link_to new_user_session_path do %>
-                <i class="fas fa-sign-in-alt btn" style="color: white; font-size: 35px;"></i>
+                <i class="fas fa-sign-in-alt btn" style="color: white; font-size: 38px;"></i>
               <% end %>
             </li>
             <li class="nav-item mx-4 my-auto">
