--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,18 +2,18 @@
   <div class="col-md-5 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
     <h2 class="text-center"><strong>ユーザー詳細<i class="fas fa-portrait" style="color: black; font-size: 30px;"></i></strong></h2>
 
-    <div class="offset-md-4">
-      <%= attachment_image_tag @user,:user_image, :fill, 150, 150, format: 'jpeg', fallback: "user_icon2.png", size: '150x150', class: "mt-4 rounded-circle" %>
+    <div class="row">
+      <div class="col-md-4 offset-md-2 rounded-circle my-3">
+        <%= attachment_image_tag @user,:user_image, :fill, 170, 170, format: 'jpeg', fallback: "user_icon2.png", size: '170x170', class: "shadow rounded-circle" %>
+      </div>
+      <div class="my-4 col-md-4 mx-5">
+        <label class="text-center" style="font-size: 30px; text-decoration: underline;"><strong><%= @user.nickname %></strong></label>
+      </div>
     </div>
 
-    <table class="table table-borderless my-4 col-md-9 mx-auto">
-      <tr>
-        <td class="text-center" style="font-size: 30px;"><strong><%= @user.nickname %></strong></td>
-      </tr>
-      <tr>
-        <td class="text-center"><%= @user.introduction %></td>
-      </tr>
-    </table>
+    <div class="col-md-9 mt-5 mx-auto">
+      <p><%= @user.introduction %></p>
+    </div>
 
     <% if @user == current_user %>
       <%= link_to edit_user_path(@user) do %>
