--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,7 +11,7 @@
         <% if post.post_images.present? %>
           <% post.post_images.each do |post_image| %>
             <div>
-              <%= attachment_image_tag post_image, :image, size: "500x350", class: "mx-auto border border-3 my-auto" %>
+              <%= attachment_image_tag post_image, :image, size: "500x350", format: 'jpeg', class: "mx-auto border border-3 my-auto" %>
             </div>
           <% end %>
         <% end %>
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="col-md-4 my-3 offset-md-1">
+      <div class="col-md-10 my-3 offset-md-1">
         <%= link_to post_path(post) do %>
           <strong style="color: black;"><%= post.title %></strong>
         <% end %>
