--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
       <% if @post.post_images.present? %>
         <% @post.post_images.each do |post_image| %>
           <div>
-            <%= attachment_image_tag post_image, :image, size: "700x500", class: "mx-auto border border-3 my-auto" %>
+            <%= attachment_image_tag post_image, :image, size: "700x500", format: 'jpeg', class: "mx-auto border border-3 my-auto" %>
           </div>
         <% end %>
       <% end %>
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 my-5 offset-md-2">
+    <div class="col-md-10 my-5 offset-md-2">
       <h4><strong style="color: black;"><%= @post.title %></strong></h4>
     </div>
     <div class="col-md-8 offset-md-2 my-5">
