--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <div class="container mw-100" style="background-color: #eee; height: auto;">
       <%= yield %>
       <span id="back">
-        <a href="#">
+        <a href="">
           <%= image_tag asset_path('arrow.png'), data: {"turbolinks"=>false}, class: "arrow" %>
         </a>
       </span>
