--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
-<div class="row my-5">
-    <div class="col-md-6 offset-md-3 text-center my-5 rounded mh-100">
-      <h1 class="my-3">-- ようこそ <strong>Dress<%= image_tag('icon.png') %>fun</strong> へ --</h1><br />
+<div class="background">
+    <div class="text-center rounded top">
+      <h1 class="py-3">-- ようこそ <strong>Dress<%= image_tag('icon.png') %>fun</strong> へ --</h1><br />
       <p class="text-decoration-underline">
         ここは様々なコーディネートを思ったままに投稿できるSNSです。<br />
         他のユーザーの投稿を見て楽しむこともできます。
