--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,26 @@
 .header-logo {
   font-family: 'Pacifico', cursive;
 }
+
+.background {
+  display: none;
+  background-image: image-url('background_image.jpg');
+  background-color: rgba(255,255,255,0.3);
+  background-blend-mode: lighten;
+  width: 100%;
+  height: 730px;
+  position: relative;
+  margin-top: 30px;
+}
+
+.top {
+  display: none;
+  height: auto;
+  width: 50%;
+  padding-top: 10px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
