--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <%= render "layouts/header" %>
     </header>
-
-    <div class="container mw-100" style="background-color: #eee; height: auto;">
+    <div class="container mw-100" style="background-color: #eee; width: 100%;">
       <%= yield %>
       <span id="back">
         <a href="">
