--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,6 @@
-<div class="row my-5">
-  <div class="col-md-6 offset-md-3 text-center bg-white rounded shadow p-3 my-5 pb-5">
-    <h1 class="my-3">-- Dress fun とは --</h1>
+<div class="background">
+  <div class="text-center rounded top">
+    <h1 class="py-1">-- Dress fun とは --</h1>
     <br />
     <p class="lh-lg">
       "Dressfun"はオシャレを楽しみたい人向けのSNSです。<br />
@@ -34,7 +34,7 @@
           <button type="button" class="btn btn-outline-primary col-md-8">新規登録へ <i class="fas fa-user-plus"></i></button>
         <% end %>
       </div>
-      <div class="col-md-10 offset-md-1 mt-3">
+      <div class="col-md-10 offset-md-1 my-4">
         <%= link_to new_user_session_path do %>
           <button type="button" class="btn btn-outline-success col-md-8">ログインへ <i class="fas fa-sign-in-alt"></i></button>
         <% end %>
