--- a/app/views/devise/registrations/complete.html.erb
+++ b/app/views/devise/registrations/complete.html.erb
@@ -1,5 +1,6 @@
-<div class="row my-5" style="height: 500px;">
-  <div class="mx-auto text-center my-5">
+<div class="row my-5" style="height: 750px; background-color: #eee; position: relative;">
+  <div class="complete text-center">
+    <p style="font-size: 56px;"><strong>Thank You!!</strong></p>
     <h1 class="my-auto"><strong>登録が完了しました！</strong></h1><br />
     <h4>引き続きDress funをお楽しみください。</h4>
   </div>
