--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="home-background">
   <div class="text-center rounded top">
     <h1 class="py-1">-- Dress fun とは --</h1>
     <br />
