--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="home-background">
     <div class="text-center rounded top">
       <h1 class="py-3">-- ようこそ <strong>Dress<%= image_tag('icon.png') %>fun</strong> へ --</h1><br />
       <p class="text-decoration-underline">
