--- a/app/views/devise/registrations/confirm.html.erb
+++ b/app/views/devise/registrations/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-5">
+<div class="row my-5" style="background-color: #eee; height: 750px;">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
     <h3 class="text-center border-bottom">以下の情報で新規登録します。よろしいですか？</h3>
 
