--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-5">
+<div class="row my-5" style="background-color: #eee;">
   <div class="col-md-6 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
     <div class="row offset-md-1">
         <%= link_to user_path(@post.user) do %>
