--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-5">
+<div class="row my-5" style="background-color: #eee;">
   <div class="col-md-9 mx-auto bg-white rounded shadow p-3 my-4 pb-5">
     <div class="row">
       <div class="offset-md-1 mt-2">
