--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,3 +93,21 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
+.search_text {
+  display: none;
+  font-size: 38px;
+  width: 42%;
+  position: absolute;
+  top: 33%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.search_form {
+  display: none;
+  width: 35%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
