--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -18,7 +18,7 @@
     <br />
 
     <% if user_signed_in? %>
-      <div class="col-md-10 offset-md-1 mt-3">
+      <div class="col-md-10 offset-md-1 my-3">
         <%= link_to :back do %>
           <button type="button" class="btn btn-outline-secondary col-md-8">戻る <i class="fas fa-undo-alt"></i></button>
         <% end %>
