--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <%= render "layouts/header" %>
     </header>
-    
+
     <%= yield %>
 
       <span id="back">
@@ -27,8 +27,6 @@
         </a>
       </span>
 
-    <footer class="bg-white pt-5 pb-5">
-      <p class="text-center">©2021 KOHEI OZAWA ︎inc.</p>
-    </footer>
+    <%= render "layouts/footer" %>
   </body>
 </html>
