--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,13 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
+
+.user-page {
+  display: none;
+  background-color: white;
+  width: 40%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
