--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<div class="row mt-5" style="background-color: #eee;">
-  <div class="col-md-5 mx-auto bg-white rounded shadow p-3 my-5 pb-5">
+<div class="background" style="height: 650px;">
+  <div class="user-page rounded shadow py-5">
     <h2 class="text-center"><strong>ユーザー詳細<i class="fas fa-portrait" style="color: black; font-size: 30px;"></i></strong></h2>
 
     <div class="row">
