--- a/app/views/posts/search_form.html.erb
+++ b/app/views/posts/search_form.html.erb
@@ -1,6 +1,6 @@
 <div class="background" style="height: 600px">
   <div class="search_text">
-    <p>お好きなアイテムをお探しください</p>
+    <p>お好きな投稿をお探しください</p>
   </div>
   <div class="search_form">
     <%= search_form_for @q, url: search_posts_path do |f| %>
